test/errors/error36.base
A type with the name 'x' has already been declared at line 1, columns 5-6

type x {
     ^
